[tool.poetry]
name = "python-libs-playground"
version = "0.1.0"
description = "A repo to play around with Python Libraries"
authors = ["Jonatha Daguerre Vasconcelos <jonatha@daguerre.com.br>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
arrow = "^1.2.2"
pydash = "^5.1.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
taskipy = "^1.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.taskipy.tasks]
fmt = "black ."